# fast-financial

./: .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.md  env.settings  fastfinancial  fastfinancial.cpp  makefile
include/FastFinancial/: FastFinancial.h
include/fastfi/: fastfi.h
src/: fastfinancial.cpp  fastfinancial.hpp  main.cpp
src/fastfi/: fastfi.cpp
tests/: CMakeLists.txt
